# test_math_vec_debug_perf

./: .gitignore  CMakeLists.txt  CMakePresets.json  build_clang.cmd  build_clang.sh  build_gcc.sh  build_vs2022.cmd  main.cpp  readme.md  test_filter.h  test_math_vector.h
.github/workflows/: main.yml
